# MiniNMEA

./: .gitignore  CMakeLists.txt  NMEA.cpp  NMEA.h  NMEASentences.cpp  NMEASentences.h  TestNMEA.cpp
include/: NMEA.h  NMEASentenceOperators.h  NMEASentences.h  UBlox.h
src/: NMEASentenceOperators.cpp  TestNMEA.cpp  test.cpp
